# Plane

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.github/workflows/: blog-deploy.yml  build.yml
abi/: Cargo.toml  build.rs
abi/protos/: abi.proto
blog/: Cargo.toml  config.yaml
blog-front/: next.config.js  package.json
blog-front/components/: ArticleData.ts  BlogList.tsx  Hero.tsx  NavBar.tsx
blog-front/pages/: _app.tsx  index.tsx
blog-front/styles/: globals.css
blog/migrations/: 20230102125959_article.down.sql  20230102125959_article.up.sql  20230102130423_article_tag.up.sql
blog/protos/: abi.proto
blog/src/: configs.rs  main.rs
blog/src/pb/: abi.rs  mod.rs
blog/src/service/: blog.rs
migrations/: 20230102130154_tag.up.sql  20230102130423_article_tag.down.sql
