[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
config = "0.13.3"
prost = "0.11.6"
prost-types = "0.11.6"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.24.2", features = ["full"] }
tonic = "0.8.3"
